# litestar-chat

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  Taskfile.yaml  pyproject.toml
.github/: .dependabot.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml  labels.yaml  release-drafter.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: codeql.yaml  dependabot_automerge.yaml  labels.yaml  pre-commit.yaml  quality_gate.yaml  release-drafter.yaml  tests.yaml
app/: __init__.py  api.py  logging.json
app/tools/: logging.py
docker/: Dockerfile
tests/: conftest.py  test_simple.py
